syntax = "proto3";
// import "proto/include/google/protobuf/any.proto";
package rbac;

service GrpcService {
  rpc UpdateGrpcMethods(UpdateMethodsRequest) returns (stream Method) {}
  rpc ListGrpcServer(GetServiceRequest) returns (stream Method) {}
  rpc ListServicesWithFullPath(GetServiceRequest) returns (stream Method) {}
  rpc ListMethodsWithFullPath(GetServiceRequest) returns (stream Method) {}
  rpc GetServiceListOnServer(GetServiceRequest) returns (stream Method) {}
  rpc GetMethodsListInService(GetServiceRequest) returns (stream Method) {}
}

service RoleService {
  rpc FindRole(FindRequest) returns (FindRoleResponse) {}
  rpc GetOneRole(GetRequest) returns (Role) {}
  rpc CreateRole(Role) returns (Role) {}
  rpc UpdateRoleById(UpdateRoleRequest) returns (FindRoleResponse) {}
  rpc DeleteRole(FindRequest) returns (DeleteResult) {}
  rpc DeleteRoleById(GetRequest) returns (DeleteResult) {}
  rpc GetRoleAccessesById(Role) returns (Role) {}
  rpc AddAccessToRoleByRid(AddAccessRequest) returns (Role) {}
  rpc DelAccessToRoleByRid(AddAccessRequest) returns (Role) {}
}

service GroupService {
  rpc FindGroup(FindRequest) returns (FindGroupResponse) {}
  rpc GetOneGroup(GetRequest) returns (Group) {}
  rpc CreateGroup(Group) returns (Group) {}
  rpc UpdateGroupById(UpdateGroupRequest) returns (FindGroupResponse) {}
  rpc DeleteGroup(FindRequest) returns (DeleteResult) {}
  rpc DeleteGroupById(GetRequest) returns (DeleteResult) {}
  rpc GetGroupAccessesById(Group) returns (stream Role) {}
  rpc AddRoleIdsToGroupByGid(AddRolesToGroupRequest) returns (Group) {}
  rpc DelRoleIdsToGroupByGid(AddRolesToGroupRequest) returns (Group) {}
}

service RbacService {
  rpc VerifyAccessRightWithRids(VerifyWithIdsRequest) returns (Rbac) {}
  rpc VerifyAccessRightWithGids(VerifyWithIdsRequest) returns (Rbac) {}
}

message GetServiceRequest {
  string package = 1;
  string service = 2;
  string path = 3;
  int32 offset = 4;
  int32 limit = 5;
}

message Method {
  string file = 1;
  string package = 2;
  string service = 3;
  string path = 4;
  string name = 5;
  string type = 6;
  string servicePath = 7;
}

message UpdateMethodsRequest {
  string fileName = 1;
  string format = 2;
  repeated Method methods = 3;
}

message FindRequest {
  string query = 1;
  int32 offset = 4;
  int32 limit = 5;
}

message GetRequest {
  string id = 1;
  string query = 2;
}

message CreateRbacRequest { string name = 1; }

message UpdateRbacRequest {
  string query = 1;
  CreateRbacRequest obj = 2;
}

message UpdateRbacByIdRequest {
  string id = 1;
  CreateRbacRequest obj = 2;
}

message DeleteResult {
  bool state = 1;
  int32 num = 2;
}

message FindRoleResponse {
  int64 count = 1;
  repeated Role rows = 2;
}

message RoleMethod {
  int32 id = 1;
  string value = 4;
  string createdAt = 13;
  string updatedAt = 14;
}

message Role {
  string id = 1;
  string name = 2;
  string description = 3;
  repeated RoleMethod roleMethods = 4;
  string createdAt = 13;
  string updatedAt = 14;
  string deletedAt = 15;
}

message UpdateRoleRequest {
  string id = 1;
  string query = 2;
  Role obj = 3;
}

message AddAccessRequest {
  int32 roleId = 1;
  string value = 2;
  int32 delId = 3;
}

message FindGroupResponse {
  int64 count = 1;
  repeated Group rows = 2;
}

message Group {
  string id = 1;
  string name = 2;
  string description = 3;
  string rids = 4;
  string createdAt = 13;
  string updatedAt = 14;
  string deletedAt = 15;
}

message UpdateGroupRequest {
  string id = 1;
  string query = 2;
  Group obj = 3;
}

message AddRolesToGroupRequest {
  int32 id = 1;
  repeated int32 roleIds = 2;
}

message Rbac {
  bool passed = 1;
}

message VerifyWithIdsRequest {
  string fullPathMethod = 1;
  repeated int32 ids = 2;
}
